# udacityCPP_nanodegree

./: README.md
A_search/: 3_14.cpp  3_8.cpp  a.out  test.cpp
concurrency/cond_variable_and_msg_queue/: a.out  ex21.cpp  ex22.cpp  test.cpp
concurrency/data_between_threads/: a.out  ex22.cpp  ex32.cpp  ex34.cpp  quiz1.cpp  quiz3.cpp  test.cpp
concurrency/intro_in_threads/: a.out  example12.cpp  example3.cpp  example35.cpp  example41.cpp  quiz.cpp  quiz2.cpp  test.cpp
concurrency/mutex_locks/: a.out  ex12.cpp  ex13.cpp  ex14.cpp
intro_cpp/: a.out  board_from_file.cpp  board_from_file_v1.cpp  board_from_file_v2.cpp  grid  grid.cpp
memory_management/: a.out  analyze_memory  analyze_memory.cpp  cache_memory.cpp  move_semantics_ex1.cpp  move_semantics_ex3.cpp  stack_inspection  stack_inspection.cpp
project2/CPP_system_monitor_project/: README.md
project2/CPP_system_monitor_project/include/: process.h  processor.h
project2/CPP_system_monitor_project/src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
project3/CppND-Memory-Management-Chatbot/: CMakeLists.txt
project3/CppND-Memory-Management-Chatbot/src/: chatbot.cpp  chatbot.h  chatlogic.cpp  chatlogic.h  graphnode.cpp  graphnode.h  launch.json  tasks copy.json
project4/CppND-Program-a-Concurrent-Traffic-Simulation/: CMakeLists.txt
project4/CppND-Program-a-Concurrent-Traffic-Simulation/src/: Intersection.cpp  Intersection.h  TrafficLight.cpp  TrafficLight.h  a.out  test.cpp
project5/CppND-Capstone-Snake-Game/: CMakeLists.txt
(+8 files in other folders)
